# unicorn-armada

./: .gitignore  CLASS_REFERENCE.md  Makefile  README.md  REPO_AUDIT.md  enhancement-plan.md  main.py  phase2_tasks.md  pyproject.toml  tanren.yml
.claude/commands/tanren/: audit-spec.md  audit-task.md  inject-standards.md  plan-product.md  shape-spec.md  triage-audits.md  walk-spec.md
.opencode/commands/tanren/: discover-standards.md  do-task.md  handle-feedback.md  index-standards.md  resolve-blockers.md  run-demo.md  sync-roadmap.md
agent-os/product/: mission.md  roadmap.md
agent-os/specs/2026-01-27-1246-scoring-normalization-feature-registry/: references.md
agent-os/specs/2026-01-27-1407-cli-core-logic-extraction/: references.md  shape.md
agent-os/specs/2026-01-27-1440-cli-logging-json-envelope/: standards.md
agent-os/specs/2026-01-27-enhanced-combat-summary/: standards.md
agent-os/specs/2026-01-27-phase1-code-quality-standards-alignment/: plan.md  standards.md
agent-os/standards/: index.yml
agent-os/standards/architecture/: api-response-format.md  naming-conventions.md
agent-os/standards/global/: address-deprecations-immediately.md
agent-os/standards/python/: strict-typing-enforcement.md
agent-os/standards/testing/: bdd-for-integration-quality.md  no-mocks-for-quality-tests.md  test-timing-rules.md
config/: character_classes.csv  combat_scoring.json  roster.csv  whitelist.csv
data/: CLASS_REFERENCE.md  dataset.json
src/unicorn_armada/: __main__.py  benchmark.py  cli.py  combat.py  core.py  io.py  logging.py  models.py  protocols.py  responses.py  scoring.py  solver.py  utils.py
tanren/audits/: standard-audit-template.md
tanren/product/: github-conventions.md  roadmap.md  tech-stack.md
tanren/scripts/: audit-standards.sh  list-candidates.py  orchestrate.sh
tanren/specs/2026-01-27-1246-scoring-normalization-feature-registry/: plan.md  shape.md  standards.md
tanren/specs/2026-01-27-1407-cli-core-logic-extraction/: plan.md  standards.md
tanren/specs/2026-01-27-1440-cli-logging-json-envelope/: plan.md  references.md  shape.md
tanren/specs/2026-01-27-1506-cli-core-test-coverage/: plan.md  references.md  shape.md
tanren/specs/2026-01-27-enhanced-combat-summary/: plan.md  references.md  shape.md
tanren/specs/2026-01-27-phase1-code-quality-standards-alignment/: plan.md  references.md  shape.md
tanren/standards/architecture/: adapter-interface-protocol.md  api-response-format.md  id-formats.md  log-line-format.md  naming-conventions.md  none-vs-empty.md  thin-adapter-pattern.md
tanren/standards/global/: no-placeholder-artifacts.md  prefer-dependency-updates.md
tanren/standards/python/: async-first-design.md  enum-field-runtime-types.md  modern-python-314.md  pydantic-only-schemas.md  strict-typing-enforcement.md
tanren/standards/testing/: bdd-for-integration-quality.md  make-all-gate.md  mandatory-coverage.md  mock-execution-boundary.md  no-mocks-for-quality-tests.md  no-test-skipping.md  three-tier-test-structure.md  validate-generated-artifacts.md
tests/: conftest.py
tests/integration/: conftest.py  test_cli_bdd.py  test_core_bdd.py
tests/quality/: conftest.py
tests/unit/: conftest.py  test_benchmark.py  test_cli.py  test_combat.py  test_core.py  test_io.py  test_models.py  test_scoring.py  test_solver.py  test_utils.py
