[project]
name = "unicorn-armada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.7.0",
    "typer>=0.12.3",
]

[project.scripts]
unicorn-rapport = "unicorn_armada.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
