[project]
name = "unicorn-armada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.7.0",
    "typer>=0.12.3",
]

[project.scripts]
unicorn-rapport = "unicorn_armada.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade - catches deprecated patterns
    "W",      # pycodestyle warnings
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "PIE",    # flake8-pie
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["unicorn_armada"]

[tool.ty.environment]
python-version = "3.14"

# Deprecation warnings are treated as errors in tests
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests (<250ms, mocks allowed, no external services)",
    "integration: Integration tests (<5s, minimal mocks, real services, NO LLMs)",
    "quality: Quality tests (<30s, minimal mocks, real services, REAL LLMs)",
]
# Timing enforcement via pytest-timeout
timeout = 30  # Default timeout (quality tier max)

[tool.coverage.run]
source = ["src/unicorn_armada"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 35  # TODO: Raise to 80% as more tests are added
